--- a/CSS_ANIMATION/animation_property/style.css
+++ b/CSS_ANIMATION/animation_property/style.css
@@ -61,16 +61,17 @@ main {
 	 border-image-source: url("./images/image.png"); 
 } */
 
-.ball{
-	width: min(100px, 300px);
-	height: 100px;
-	background: red;
-	border-radius: 50%;
+.ball {
+	border-radius: 25px;
+	width: 50px;
+	height: 50px;
+	background: #c00;
 	position: absolute;
-	transition: transform 0.2s  ;
-	z-index: 0.5;
-}
-
+	top: 0;
+	left: 0;
+	transition: transform 1s;
+  }
+  
 body{
 	overflow: hidden;
 }
