--- a/CSS_ANIMATION/06-click-spread-spark/style.css
+++ b/CSS_ANIMATION/06-click-spread-spark/style.css
@@ -23,7 +23,7 @@ body {
 	filter: drop-shadow(0 0 20px #0f0) drop-shadow(2px 0 40px #0f0);
 }
 .spark span::before{
-	content: 'A';
+	content: '';
 	position: absolute;
 	width: 100%;
 	height: 100%;
